--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "^0.0.14",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.1",
     "@trpc/next": "^10.45.1",
@@ -45,6 +46,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
+    "resend": "^3.2.0",
     "sonner": "^1.4.0",
     "stripe": "^14.16.0",
     "swiper": "^11.0.6",
